# spyhunt

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  spyhunt.py  spyhunt.service
.github/workflows/: makefile.yml  pypi-publish.yml  python-pub.yml  python-publish.yml
docs/: architecture.md
spyhunt/: __init__.py  main.py
spyhunt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
spyhunt/payloads/: .keep
spyhunt/scanners/: __init__.py  base.py  http.py  ports.py  subdomains.py
spyhunt/utils/: dnsparser.py
tests/: conftest.py  test_cli.py
