[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyhunt"
version = "4.1.0"
description = "Refactored reconnaissance helpers with async scanners"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Pymmdrza" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/Pymmdrza/spyhunt"
Source = "https://github.com/Pymmdrza/spyhunt"

[project.scripts]
spyhunt = "spyhunt.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["spyhunt*"]
